examples/positive/recursion.nv
fn factorial(n: int) : int {
    if (n > 0) {
        return n * factorial(n-1);
    } else {
        return 1;
    }
}
fn main() : void {
    let x : int = 5;
    print_int(factorial(x));
    return;
}
