examples/negative/unmatched_parameter_number.nv
fn main() : void {
    inverse_int(1, 2);
    return;
}
fn inverse_int(x: int) : int {
    return -x;
}